# EcoPaste

./: .commitlintrc  .gitattributes  .gitignore  .release-it.ts  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  README.en-US.md  README.ja-JP.md  README.ja_JP.md  README.md  README.zh-CN.md  README.zh-TW.md  RELEASE-NEXT.md  TODO-Auto-Updater.md  TODO-CI-Release.md  TODO-Clipboard-Group-UI-Refactor.md  TODO-Edge-Hide.md  TODO-Item-Password-Protection.md  TODO-LAN-Sync.md  TODO-Lightweight-Mode.md  TODO-List-Display-Limits.md  TODO-Multi-Select-Delete.md  TODO-Onboarding.md  TODO-Per-App-Rules.md  TODO-Testing-Quality.md  TODO-Version-Management.md  TODO-WebDAV-Sync.md  TODO-Windows-Portable.md  TODO-Windows-Win-V.md  TODO.md  TODO_CLI_AI.md  biome.json  bootstrap-data-merged.json  cldr.json  (+12 more)
src-tauri/: .env.example  .gitignore  Cargo.toml  EcoPaste.desktop  Info.plist  build.rs  info.plist  rustfmt.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  macos-permissions.json
src-tauri/migrations/: 0001_init.sql  0002_fts.sql
src-tauri/src/: admin.rs  fs_extra.rs  lib.rs  main.rs  tray.rs  update.rs  window.rs
src-tauri/src/autostart/: macos.rs  mod.rs  windows.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/clipboard/: app_store.rs  apps_registry.rs  cleanup.rs  detect.rs  file_icon_store.rs  guard.rs  icon.rs  ingest.rs  mod.rs  payload.rs  read.rs  secrets.rs  sound.rs  source.rs  storage.rs  watcher.rs  write.rs
src-tauri/src/commands/: admin.rs  autostart.rs  backup.rs  clipboard.rs  context_menu.rs  drag.rs  link.rs  mod.rs  onboarding.rs  settings.rs  shortcut.rs  storage.rs  update.rs  window.rs
src-tauri/src/core/: error.rs  info.rs  mod.rs  paths.rs  prevent_default.rs  tray.rs  windows_args.rs
src-tauri/src/core/app/: linux.rs  mac.rs  macos.rs  mod.rs  win.rs
src-tauri/src/core/setup/: linux.rs  mac.rs  macos.rs  mod.rs  win.rs  windows.rs
src-tauri/src/db/: apps.rs  file_icons.rs  groups.rs  init.rs  items.rs  mod.rs  models.rs  path.rs  state.rs
src-tauri/src/drag_out/: macos.rs  mod.rs  windows.rs  windows_ghost.rs
src-tauri/src/i18n/: clipboard_menu.rs  commands.rs  keys.rs  mod.rs  tray.rs
src-tauri/src/i18n/en_us/: clipboard_menu.rs  commands.rs  tray.rs
src-tauri/src/i18n/zh_cn/: clipboard_menu.rs  commands.rs  mod.rs  tray.rs
src-tauri/src/keyboard/: mod.rs  noop.rs  windows.rs
src-tauri/src/keystroke/: macos.rs  mod.rs  windows.rs
src-tauri/src/locales/: en_us.rs  ja_jp.rs  mod.rs  zh_cn.rs  zh_tw.rs
src-tauri/src/menu/: clipboard_item.rs  context_window.rs  mod.rs
src-tauri/src/mouse/: mod.rs  windows.rs
src-tauri/src/plugins/: auto_launch.rs  backup.rs  clipboard.rs  fs_extra.rs  locale.rs  macos_permissions.rs  mod.rs  mouse.rs  ocr.rs  paste.rs  tray.rs  updater.rs  window.rs
src-tauri/src/plugins/autostart/: Cargo.toml
src-tauri/src/plugins/autostart-x/: Cargo.toml  build.rs
src-tauri/src/plugins/autostart-x/permissions/: default.toml
src-tauri/src/plugins/autostart-x/src/: commands.rs  lib.rs
src-tauri/src/plugins/autostart/src/: lib.rs
src-tauri/src/plugins/backup/: Cargo.toml  build.rs
src-tauri/src/plugins/backup/permissions/: default.toml
src-tauri/src/plugins/backup/permissions/autogenerated/: reference.md
src-tauri/src/plugins/backup/permissions/schemas/: schema.json
src-tauri/src/plugins/backup/src/: commands.rs  lib.rs
src-tauri/src/plugins/clipboard/: Cargo.toml  build.rs
src-tauri/src/plugins/clipboard-paste/: Cargo.toml
src-tauri/src/plugins/clipboard-paste/src/commands/: linux.rs  macos.rs  windows.rs
src-tauri/src/plugins/clipboard/permissions/: default.toml
src-tauri/src/plugins/clipboard/permissions/autogenerated/: reference.md
src-tauri/src/plugins/clipboard/permissions/schemas/: schema.json
src-tauri/src/plugins/clipboard/src/: commands.rs  lib.rs
src-tauri/src/plugins/fs-extra/: Cargo.toml  build.rs
src-tauri/src/plugins/fs-extra/permissions/: default.toml
src-tauri/src/plugins/fs-extra/permissions/autogenerated/: reference.md
src-tauri/src/plugins/fs-extra/permissions/schemas/: schema.json
src-tauri/src/plugins/fs-extra/src/: commands.rs  lib.rs
src-tauri/src/plugins/locale/: Cargo.toml  build.rs
src-tauri/src/plugins/locale/permissions/: default.toml
src-tauri/src/plugins/locale/src/: commands.rs  lib.rs
src-tauri/src/plugins/macos-permissions/: Cargo.toml  build.rs
src-tauri/src/plugins/macos-permissions/permissions/: default.toml
src-tauri/src/plugins/macos-permissions/src/: commands.rs  lib.rs
src-tauri/src/plugins/mouse/: Cargo.toml  build.rs
src-tauri/src/plugins/mouse/permissions/: default.toml
src-tauri/src/plugins/mouse/src/: commands.rs  lib.rs
src-tauri/src/plugins/ocr/: Cargo.toml  build.rs
src-tauri/src/plugins/ocr/permissions/: default.toml
src-tauri/src/plugins/ocr/src/: commands.rs  lib.rs
src-tauri/src/plugins/paste/: Cargo.toml  build.rs  linux.rs  mac.rs  mod.rs  win.rs
src-tauri/src/plugins/paste/permissions/: default.toml
src-tauri/src/plugins/paste/src/: lib.rs
src-tauri/src/plugins/webdav/: Cargo.toml  build.rs
src-tauri/src/plugins/webdav/permissions/: default.toml
src-tauri/src/plugins/webdav/src/: commands.rs  lib.rs
src-tauri/src/plugins/window/: Cargo.toml  build.rs
src-tauri/src/plugins/window-manage/: Cargo.toml
src-tauri/src/plugins/window-manage/permissions/: default.toml
src-tauri/src/plugins/window-manage/src/: lib.rs
src-tauri/src/plugins/window-state/: Cargo.toml  build.rs
src-tauri/src/plugins/window-state/permissions/: default.toml
src-tauri/src/plugins/window-state/src/: commands.rs  lib.rs
src-tauri/src/plugins/window/src/: commands.rs  lib.rs
src-tauri/src/settings/: mod.rs  model.rs  store.rs
src-tauri/src/shortcut/: mod.rs  win_v.rs
src-tauri/src/tray/: i18n.rs  mod.rs
src-tauri/src/window/: macos.rs  mod.rs  position.rs  preview.rs  state.rs  windows.rs
src-tauri/src/window/lifecycle/: descriptor.rs  mod.rs
(+826 files in other folders)
