[workspace]
resolver="2"
members = [
    "src-tauri"
]

[workspace.dependencies]
tauri = "2" 
serde = "1"
serde_json = "1"
fs_extra = "1.3.0"
log = "0.4.22"
cocoa = "0.25.0"
tauri-plugin-shell = "2"
tauri-plugin-fs-pro = "2"
tauri-plugin = { version = "2", features = ["build"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-eco-window = { path = "./src-tauri/src/plugins/window" }
tauri-plugin-eco-backup = { path = "./src-tauri/src/plugins/backup" }
tauri-plugin-eco-locale = { path = "./src-tauri/src/plugins/locale" }
tauri-plugin-eco-clipboard = { path = "./src-tauri/src/plugins/clipboard" }
tauri-plugin-eco-ocr = { path = "./src-tauri/src/plugins/ocr" }
tauri-plugin-eco-paste = { path = "./src-tauri/src/plugins/paste" }
tauri-plugin-eco-autostart = { path = "./src-tauri/src/plugins/autostart" }