[workspace]
resolver="2"
members = [
    "src-tauri"
]

[workspace.dependencies]
tauri = "2" 
serde = "1"
serde_json = "1"
fs_extra = "1"
log = ">=0.4, <1"
cocoa = ">=0.25, <1"
tauri-plugin-fs-pro = "2"
tauri-plugin = { version = "2", features = ["build"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-window-manage = { path = "./src-tauri/src/plugins/window-manage" }
tauri-plugin-clipboard-paste = { path = "./src-tauri/src/plugins/clipboard-paste" }
tauri-plugin-autostart-x = { path = "./src-tauri/src/plugins/autostart-x" }