[package]
name = "EcoPaste"
version = "0.6.0-beta.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eco_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tauri-plugin-log = "2"
log = "0.4"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
clipboard-rs = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
auto-launch = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSImage", "NSBitmapImageRep"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winbase",
    "winnt",
    "shellapi",
    "wingdi",
    "minwindef",
    "windef",
] }
png = "0.17"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
image = { version = "0.25", default-features = false, features = ["png"] }

