[package]
name = "EcoPaste"
version = "0.6.0-beta.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eco_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tauri-plugin-log = "2"
log = "0.4"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
blake3 = "1"
clipboard-rs = { git = "https://github.com/ayangweb/clipboard-rs", branch = "feat/configurable-watch-interval" }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "5"
auto-launch = "0.6"
rodio = { version = "0.20", default-features = false, features = ["symphonia-mp3"] }
file_icon_provider = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-os = "2"
drag = "2.1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary", "NSURL", "NSArray", "NSGeometry", "NSAttributedString"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSImage", "NSView", "NSWindow", "NSEvent", "NSApplication", "NSResponder", "NSPasteboard", "NSPasteboardItem", "NSDraggingItem", "NSDraggingSession", "NSAttributedString", "NSStringDrawing", "NSColor", "NSFont", "NSParagraphStyle", "NSBezierPath", "NSGraphics"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
plist = { version = "1", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winbase",
    "winnt",
    "minwindef",
    "windef",
] }
# 文本 drag-out 需要自实现 IDataObject(CF_UNICODETEXT)；drag crate 的 DragItem::Data
# 在 Windows 是 dummy（永远拖一个 "./" 目录）。与 drag crate 的 windows 0.52 对齐。
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
image = { version = "0.25", default-features = false, features = ["png"] }

