[package]
name = "EcoPaste"
version = "1.0.0"
description = "A local-first clipboard manager for macOS and Windows."
authors = ["ayangweb"]
license = "Apache-2.0"
homepage = "https://github.com/EcoPasteHub/EcoPaste"
repository = "https://github.com/EcoPasteHub/EcoPaste"
readme = "../README.md"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eco_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tauri-plugin-log = "2"
log = "0.4"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
blake3 = "1"
clipboard-rs = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-prevent-default = "5"
auto-launch = "0.6"
rodio = { version = "0.20", default-features = false, features = ["symphonia-mp3"] }
file_icon_provider = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
time = "0.3"
drag = "2.1"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
walkdir = "2"
tempfile = "3"
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
zeroize = "1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary", "NSURL", "NSArray", "NSGeometry", "NSAttributedString"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSImage", "NSView", "NSWindow", "NSEvent", "NSApplication", "NSResponder", "NSPasteboard", "NSPasteboardItem", "NSDraggingItem", "NSDraggingSession", "NSAttributedString", "NSStringDrawing", "NSColor", "NSFont", "NSParagraphStyle", "NSBezierPath", "NSGraphics"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
plist = { version = "1", default-features = false }
tauri-plugin-macos-permissions = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winbase",
    "winnt",
    "minwindef",
    "windef",
] }
windows-registry = "0.6"
windows-result = "0.4"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
