[package]
name = "tauri-plugin-eco-backup"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-backup"

[dependencies]
tauri.workspace = true
serde.workspace = true
fs_extra.workspace = true
flate2 = "1.0.34"
tar = "0.4.42"
tauri-plugin-fs-pro.workspace = true

[build-dependencies]
tauri-plugin.workspace = true