[package]
name = "tauri-plugin-eco-clipboard"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-clipboard"

[dependencies]
tauri.workspace = true
serde.workspace = true
clipboard-rs = "0.2"

[build-dependencies]
tauri-plugin.workspace = true
