[package]
name = "tauri-plugin-eco-fs-extra"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-fs-extra"

[dependencies]
tauri = { version = "2.0.2" }
serde = "1.0"
fs_extra = "1.3.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }

[target."cfg(target_os = \"linux\")".dependencies]
showfile = "0.1.1"