[package]
name = "tauri-plugin-eco-fs-extra"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-fs-extra"

[dependencies]
tauri.workspace = true
serde.workspace = true
fs_extra.workspace = true

[build-dependencies]
tauri-plugin.workspace = true

[target."cfg(target_os = \"linux\")".dependencies]
showfile = "0.1.1"