[package]
name = "tauri-plugin-eco-locale"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-locale"

[dependencies]
tauri = { version = "2.0.2" }
serde = "1.0"
current_locale = "0.1.1"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
