[package]
name = "tauri-plugin-eco-locale"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-locale"

[dependencies]
tauri.workspace = true
serde.workspace = true
current_locale = "0.1"

[build-dependencies]
tauri-plugin.workspace = true
