[package]
name = "tauri-plugin-eco-mouse"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-mouse"

[dependencies]
tauri.workspace = true
serde.workspace = true
mouse_position = "0.1.4"

[build-dependencies]
tauri-plugin.workspace = true
