[package]
name = "tauri-plugin-eco-ocr"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-ocr"

[dependencies]
tauri = { version = "2.0.2" }
serde = "1.0"
tauri-plugin-shell = "2.0.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }

[target."cfg(target_os = \"linux\")".dependencies]
log = "0.4.22"