[package]
name = "tauri-plugin-eco-ocr"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-ocr"

[dependencies]
tauri.workspace = true
serde.workspace = true
tauri-plugin-shell.workspace = true

[build-dependencies]
tauri-plugin.workspace = true

[target."cfg(target_os = \"linux\")".dependencies]
log.workspace = true