[package]
name = "tauri-plugin-eco-window-state"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-window-state"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tauri-plugin.workspace = true
