[package]
name = "tauri-plugin-eco-window"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-window"

[dependencies]
tauri = { version = "2.0.2" }
serde = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
